# Cinema-Backend

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
app/: package.json
app/config/: database.js  server.js
migrations/2021-02-05-181620_init/: down.sql  up.sql
migrations/2021-02-13-122030_videos_tags_constraints/: down.sql  up.sql
migrations/2021-02-13-134203_video_has_tag_function/: down.sql  up.sql
migrations/2021-02-20-114051_user_types/: down.sql  up.sql
migrations/2021-03-02-201223_users_customer/: down.sql  up.sql
migrations/2021-03-03-204136_tokens/: down.sql  up.sql
migrations/2021-03-03-220254_channel_tokens/: down.sql  up.sql
migrations/2021-03-06-190430_channels_tokens_expiry/: down.sql  up.sql
migrations/2021-03-14-113745_comments/: down.sql  up.sql
migrations/2021-03-14-114722_videos_constraints/: down.sql  up.sql
migrations/2021-03-14-115419_comments_edit/: up.sql
migrations/2021-03-14-144010_upvotes/: down.sql  up.sql
migrations/2021-03-14-144754_upvote_edits/: down.sql  up.sql
migrations/2021-03-14-145627_upvote_renaming/: down.sql  up.sql
migrations/2021-03-21-142202_count_upvotes/: down.sql  up.sql
migrations/2021-03-24-204350_video_plays/: down.sql  up.sql
migrations/2021-03-24-210232_count_video_plays/: down.sql  up.sql
migrations/2021-03-26-152819_user_is_subscribed/: down.sql  up.sql
migrations/2021-03-26-171655_video_recently_watched/: down.sql  up.sql
migrations/2021-03-27-141422_channel_stripe_accounts/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/jobs/: mod.rs  (+2 more)
(+27 files in other folders)
