[package]
name = "rust-api"
version = "0.1.0"
authors = ["theo <theocrowley24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "*"
actix-multipart = "*"
actix-cors = "*"
stripe-rust = { git = "https://github.com/seanpianka/stripe-rs.git", branch = "fix-serde" }
serde = "<1.0.118, >=1.0.79"
serde_json = "1.0"
bcrypt = "*"
jsonwebtoken = "*"
futures = "*"
validator = { version = "0.12", features = ["derive"] }
uuid = { version = "0.4", features = ["serde", "v4"] }
rand = "0.8.3"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
cronjob = "*"
rust-s3=  { version = "*", features = ["no-verify-ssl"]}